# Indoor_delivery_bot

d_bot_description/: CMakeLists.txt  package.xml
d_bot_description/config/: controller_manager.yaml  joint_names_indoor_delivery_botv2.yaml
d_bot_description/launch/: display.launch  gazebo.launch  robotv2_description.launch.py
d_bot_description/meshes/: base_link.STL  bl_caster_wheel_link.STL  br_caster_holder_link.STL  br_caster_wheel_link.STL  caster_fl.STL  caster_fr.STL  caster_holder_link.STL  caster_rl.STL  caster_rr.STL  drive_left_link.STL  drive_right_link.STL  drive_wheel_left.STL  drive_wheel_right.STL  fl_caster_holder_link.STL  fl_caster_wheel_link.STL  fr_caster_holder_link.STL  fr_caster_wheel_link.STL  front_lidar_link.STL  left_rs_link.STL  lidar_link.STL  right_rs_link.STL  rs_left.STL  rs_right.STL
d_bot_description/meshes/collision/: base_link.STL  caster_holder_link.STL  caster_wheel_link.STL  drive_left_link.STL  drive_right_link.STL
d_bot_description/rviz/: rviz.rviz
d_bot_description/urdf/: FinalOP.urdf  caster_holder_transmission.xacro  caster_transmission.xacro  d_bot_full.urdf.xacro  d_bot_full.xacro  d_bot_full_copy.xacro  d_bot_main.urdf  d_bot_main.urdf.xacro  d_bot_main.xacro  gazebo.xacro  gazebo_color.xacro  gazebo_physics.xacro  gazebo_sensors.xacro  indoor_delivery_botv2.csv  indoor_delivery_botv2.urdf  robot.gazebo.xacro
d_bot_driver/: CMakeLists.txt  package.xml  setup.cfg  setup.py
d_bot_driver/config/: laser_merge.yaml  pc2laser.yaml  pc2laserleft.yaml  pc2laserright.yaml  pointcloud_laser.yaml
d_bot_driver/launch/: cloud_to_laser.launch  laser_merge.launch  pc2laser.launch.py  pc_laser_merger.py  scan_merger.launch.py
d_bot_exploration/: package.xml  setup.cfg  setup.py
d_bot_exploration/config/: explore.yaml
d_bot_exploration/launch/: explore.launch.py
d_bot_gazebo/: CMakeLists.txt  package.xml
d_bot_gazebo/launch/: gazebo.launch
d_bot_gazebo/worlds/: cafe.world
d_bot_localization_server/: package.xml  setup.cfg  setup.py
d_bot_localization_server/config/: amcl.yaml
d_bot_localization_server/launch/: init_robot.launch.py  localization.launch.py
d_bot_navigation/: CMakeLists.txt  package.xml
d_bot_navigation/config/: bt_navigator.yaml  controller.yaml  costmap_common_params.yaml  costmap_common_params_copy.yaml  gmapping.yaml  planner_server.yaml  recovery.yaml
d_bot_navigation/launch/: amcl.launch  d_bot_mapserver.launch.py  d_bot_navigation.launch.py  explore_lite_slam.launch  gmapping.launch  move_base.launch  navigation_main.launch
d_bot_navigation/maps/: first_map.pgm  first_map.yaml  trial1.pgm  trial1.yaml
d_bot_navigation/rviz/: navigation.rviz
d_bot_sim_control/: CMakeLists.txt  package.xml
d_bot_sim_control/config/: diffdrive.yaml
d_bot_sim_control/launch/: diff_drive.launch
d_bot_slam/: package.xml  setup.cfg  setup.py
d_bot_slam/config/: d_bot_slam.lua
d_bot_slam/maps/: cafe.pgm  (+1 more)
(+5 files in other folders)
