<?xml version="1.0"?>
<package format="2">
  <name>d_bot_gazebo</name>
  <version>0.0.0</version>
  <description>The d_bot_gazebo package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="sajin@todo.todo">sajin</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->

  <!-- note: this is used to add the models externally export to gazebo -->
  <export>
    <!-- List of directories containing models, meshes, materials, etc. -->
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <!-- Add more directories as needed -->
  </export>
</package>
